# 24_7_prayer_api

./: Dockerfile  Makefile  README.md  conftest.py  docker-compose.swarm.yml  docker-compose.yaml  manage.py  pyproject.toml  setup.cfg
entrypoint/: entrypoint.sh
prayer/: __init__.py  api.py  apps.py  asgi.py  urls.py  wsgi.py
prayer/admin/: user.py
prayer/apis/v1/serializers/: bookings.py  profile.py
prayer/apis/v1/views/: bookings.py  profile.py
prayer/cron/: notifications.py
prayer/migrations/: 0001_initial.py  0002_bookings.py  0003_auto_20210503_1851.py
prayer/models/: __init__.py  booking.py  user.py
prayer/services/: bookings.py
prayer/settings/: __init__.py  base.py  testing.py
tests/: test_prayer.py
tests/apis/v1/serializers/: test_profile_serializer.py
